[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-manipulator"
version = "0.1.0"
description = "Stream-friendly file manipulation CLI demonstrating DS&A (Bloom filter, reservoir sampling, online stats, external sort)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Kevin Ryou Inoue" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
file-manipulator = "file_manipulator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["file_manipulator*"]